# Framework-for-NACIT2017

./: Control Program Introduction of NACIT2016.docx  ImageProcess Program Introduction of NACIT2016.docx  README-中文.md  README.md
Final Control & ImageProcessing Programs of NACIT2016/Source Code/AUVAutoControl/: AUVAutoControl.pro  auvautocontrol.cpp  auvautocontrol.h  auvautocontrol.ui  global.h  main.cpp  mission_param.h  thruster.h  新建文本文档.txt
Final Control & ImageProcessing Programs of NACIT2016/Source Code/CustomizeFuntions/CustomizeStructs/: imageprocessheader.h
Final Control & ImageProcessing Programs of NACIT2016/Source Code/CustomizeFuntions/GeneralImageProcess/: contours_fun.h  draw_fun.cpp  draw_fun.h  findline_fun.cpp  findline_fun.h  imageprocessing_fun.cpp  imageprocessing_fun.h
Final Control & ImageProcessing Programs of NACIT2016/Source Code/CustomizeFuntions/SpecialImageProcess/: findfirstdoor.cpp  findfirstdoor.h  torpedoboard_fun.cpp  torpedoboard_fun.h
Final Control & ImageProcessing Programs of NACIT2016/Source Code/CustomizeFuntions/SupportFunctions/: ports_fun.cpp  ports_fun.h  string_fun.cpp  string_fun.h  xmls_fun.cpp  xmls_fun.h
Final Control & ImageProcessing Programs of NACIT2016/Source Code/VisionClass/: nccamera.cpp  nccamera.h  ncdownmodel.cpp  ncdownmodel.h  ncfwdmodel.cpp  ncfwdmodel.h  ncheader.h  ncimgpro.h  ncimgpro_basic.cpp  ncimgpro_process.cpp  ncinit.cpp  ncmodel.cpp  ncmodel.h  ncvinforeplay.cpp  ncvinforeplay.h  ncvision.h  ncvision_analyse.cpp  ncvision_basic.cpp  ncvision_coutinfo.cpp  ncvision_draw.cpp  ncvision_record.cpp  ncvision_tmppro.cpp
Final Control & ImageProcessing Programs of NACIT2016/Source Code/XML Save Path/Camera_Calibration/UnderWater/: Camera28_UnderWater_640_480.xml  Camera28_UnderWater_780_580.xml  (+2 more)
Final Control & ImageProcessing Programs of NACIT2016/Source Code/XML Save Path/FilterThresh/: 0520_Door.xml  0520_Line.xml  0520_LineInDoor.xml  0525_TorpedoBoard.xml  0526_BallsFar.xml  0526_RedAttach.xml  0526_RedFar.xml  0526_RedNear.xml  0526_StyleDoor.xml  0526_StyleDoorNear.xml  0526_YelGreAttach.xml  0526_YelGreNear.xml  0614_TestBlackDoorSidePoles.xml  0614_TestBlackDoorTopPoles.xml  0614_TestLineInBlackDoor.xml  0614_TestStyleDoorFar.xml  0614_TestStyleDoorNear.xml  0617_RedBall.xml  0617_YelGreBalls.xml  0619_RedBall.xml  0619_RedBall02.xml  0619_YelGreBall02.xml  0621_StyleDoor.xml  0623_StyleDoor.xml  0625_RedBall.xml  0625_YelGreBalls.xml  0627_Line.xml  0627_LineInDoor.xml  0629Night_RedBall.xml  0629Night_YelGreBalls.xml  0704_TorBoard.xml  0704_TorRedEdge.xml  0708Night_Line.xml  0708Night_LineInDoor.xml  0708_GreenBall.xml  0708_Line.xml  0708_RedBall.xml  0708_YellowBall.xml  0709Night_RedBall.xml  0709Night_YelGreBalls.xml  (+71 more)
NCStrategy Framework/: CMakeLists.txt  CMakeLists.txt~
NCStrategy Framework/CustomizeFunctions/: CMakeLists.txt
NCStrategy Framework/CustomizeFunctions/GeneralImageProcess/: CMakeLists.txt  CMakeLists.txt~  contours_fun.cpp  contours_fun.cpp~  imageprocessing_fun.cpp  imageprocessing_fun.h
NCStrategy Framework/CustomizeFunctions/SupportFunctions/: CMakeLists.txt  CMakeLists.txt~  string_fun.cpp  string_fun.h  sys_fun.cpp  sys_fun.cpp~  sys_fun.h
NCStrategy Framework/IPCClients/: CMakeLists.txt  CMakeLists.txt~
NCStrategy Framework/IPCClients/IPCImageClient/: ncclient_image_main.cpp
NCStrategy Framework/IPCClients/IPCSendClient/: ncclient_send_main.cpp
NCStrategy Framework/IPCClients/IPCSurfClient/: NCClient_Surf_Main.cpp
NCStrategy Framework/IPCServer/: CMakeLists.txt  CMakeLists.txt~  main.cpp
NCStrategy Framework/NCFunctions/: CMakeLists.txt  CMakeLists.txt~
NCStrategy Framework/NCFunctions/NCClient/: CMakeLists.txt  CMakeLists.txt~  ncclient.cpp  ncclient.h  ncclient.h~  ncclient_image.cpp  ncclient_image.cpp~  ncclient_image.h  ncclient_imagemacros.h  ncclient_macros.h  ncclient_send.cpp  ncclient_send.cpp~  ncclient_send.h  ncclient_surface.cpp  ncclient_surface.h
NCStrategy Framework/NCFunctions/NCServer/: CMakeLists.txt  CMakeLists.txt~  ncserver.h  ncserver.h~  ncserver_dataproc.cpp  ncserver_link.cpp  ncserver_macros.h  ncserver_record.cpp  ncserver_record.cpp~  ncserver_stage.cpp  ncserver_strategy.cpp
NCStrategy Framework/NCFunctions/NCStage/: CMakeLists.txt  CMakeLists.txt~  ncstage_test.cpp  ncstage_test.h
NCStrategy Framework/NCFunctions/NCStage/Basic/: ncstage.cpp  ncstage.h  ncstage.h~  ncstage_basic.cpp  ncstage_basic.h  ncstage_macro.h
NCStrategy Framework/NCStrategy/: NCStrategy.pro  client_thread.cpp  client_thread.h  main.cpp  ncstrategymainwin.cpp  ncstrategymainwin.h  ncstrategymainwin.ui
